--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sirkew-portfolio",
+  "homepage": "https://sirkew.github.io/Sirkew-chakma/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
